[package]
name = "rawdog_vulkan"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
derive-new = "0.7.0"
image = {version = "0.25.6", default-features = false, features = ["png"]}
itertools = "0.14.0"
raw-window-handle = "0.6.2"
strum = "0.27.1"
strum_macros = "0.27.1"
winit = { version = "0.29.15", default-features = false, features = ["wayland", "wayland-csd-adwaita", "rwh_06"] }
proc_macros = { path = "proc_macros" }
